Ayush | Fix some mobile related issue for all

--- a/crowdsource-ui/src/assets/css/common.css
+++ b/crowdsource-ui/src/assets/css/common.css
@@ -139,6 +139,10 @@ body {
    top: 39px;
    left: -4px;
   }
+  .dekho-back-btn {
+    left: 1px !important;
+    margin-top: -7px !important;
+  }
 
   .top-back-btn .back-text {
     display: none;
