--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -4,7 +4,7 @@
             <div class="d-none">
                 <p class="text-muted">Supported by EkStep Foundation (built on <a href="https://sunbird.org/ai">sunbird.org/ai</a>)</p>
             </div>
-            <div class="d-lg-inline-flex justify-content-around mb-2 ml-5">
+            <div class="d-lg-inline-flex justify-content-around mb-2 footer-links">
                 <div class="py-2 px-16">
                     <a href="<%- `${path}about-us.html`%>">
                         <%= __('About Us') %>
@@ -26,8 +26,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row m-0">
-                <div class="row justify-content-center mb-2">
+            <div class="row mx-0 mb-3">
                     <div class="col-12 mt-1 text-center">
                         <%= __('Share it with your friends and family') %>
                     </div>
@@ -45,7 +44,6 @@
                             <img src="../../img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
                         </a>
                     </div>
-                </div>
             </div>
         </div>
     </div>
