--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -1,7 +1,7 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/virtualKeyboard.css">
 <div class="justify-content-center d-none" id="keyboardBox">
-    <div style="width:560px">
+    <div class="keyboard-layout">
         <div id="keyboardBoxHeader" class="justify-content-between d-flex">
             <div id="keyboardLayoutName">language name</div>
             <div id="keyboardCloseBtn">X</div>
