--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -28,7 +28,7 @@
         <div id="content-wrapper" class="d-flex flex-column position-relative">
             
             <div class="modal-footer pt-3 position-relative">
-                <div class="row position-absolute top-back-btn">
+                <div class="row position-absolute dekho-back-btn top-back-btn">
                     <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
                 </div>
                 <%- include ../common/report-btn.ejs %>
