--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -114,7 +114,7 @@
                         </text>
                     </svg>
                 </button>
-                <button class="btn align-self-start mb-2 pl-4 d-none" id="submit-edit-button">
+                <button class="btn align-self-start mb-2 d-none" id="submit-edit-button">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
                         <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
