--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
@@ -435,6 +435,7 @@ body.modal-open .supreme-container {
 @media (max-width: 767px) {
   .from-label {
     text-align: left;
+    padding-left: 0px !important;
   }
 }
 
