--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thankyou.css
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thankyou.css
@@ -202,3 +202,18 @@
     0% {margin-left: 100%;}
     100% {margin-left:-100%;}
 }
+
+@media (max-width: 767px) {
+    .top-back-btn {
+     top: 80px;
+     left: 10px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+  
+    .top-back-btn {
+        top: 100px !important;
+        left: 35px !important;
+       }
+}
+  
