--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
-                <button class="btn align-self-start mb-2 p-0 mr-4" id="need_change">
+                <button class="btn align-self-start mb-2 p-0 need_change_btn" id="need_change">
                     <svg width="245" height="66" viewBox="0 0 245 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 33C1 15.3269 15.3269 1 33 1H212C229.673 1 244 15.3269 244 33C244 50.6731 229.673 65 212 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
                         <path d="M38.06 30.02L38.98 30.94L29.92 40H29V39.08L38.06 30.02ZM41.66 24C41.41 24 41.15 24.1 40.96 24.29L39.13 26.12L42.88 29.87L44.71 28.04C45.1 27.65 45.1 27.02 44.71 26.63L42.37 24.29C42.17 24.09 41.92 24 41.66 24ZM38.06 27.19L27 38.25V42H30.75L41.81 30.94L38.06 27.19Z" fill="#007BFF"/>
