--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thankyou.css
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thankyou.css
@@ -103,6 +103,14 @@
        }
 }
 
+@media screen and (min-width: 768px) {
+  
+    .top-back-btn {
+        top: 100px !important;
+        left: 35px !important;
+       }
+}
+
 @media screen and (max-width: 599px) {
     .contribuion-info,
     .stats-container {
