--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:"Correct"}); %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:"Validate"}); %>
 <div id="content-wrapper" class="container-fluid mt-5 pt-2 pb-2 px-3 px-md-5 bg-thank-you h-100">
     <div class="text-center">
         <div class="row position-absolute top-back-btn">
