--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../../css/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/dashboard.css">
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
 </head>
