Ayush | Fix some UI isssues

--- a/crowdsource-ui/src/views/common/buttons/virtualKeyboardBtn/virtualKeyboardBtn.css
+++ b/crowdsource-ui/src/views/common/buttons/virtualKeyboardBtn/virtualKeyboardBtn.css
@@ -2,7 +2,8 @@
     background-color:#e9ecef;
     position:fixed;
     bottom:15px;
-    right:15px
+    right:15px;
+    padding: 5px 15px;
 }
 
 
