--- a/crowdsource-ui/src/views/common/card/card.css
+++ b/crowdsource-ui/src/views/common/card/card.css
@@ -70,7 +70,7 @@
 }
 
 .right-logo{
-    background: #4D82F7;
+    background:#3e6dd4;
     border-radius: 50%;
     box-shadow: 0px 0px 12px 8px rgba(102, 176, 255, 0.4);
     justify-self: right;
