--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="col-4 text-right px-0">
-                <img src="<%= right.img %>" alt="validator" id="start_validating" data-toggle="modal" class="cursor-pointer left-logo img-fluid" data-target="#userModal" width="140px" height="140px" class="cursor-pointer right-logo img-fluid">
+                <img src="<%= right.img %>" alt="validator" id="start_validating" data-toggle="modal" class="cursor-pointer right-logo img-fluid" data-target="#userModal" width="140px" height="140px" class="cursor-pointer right-logo img-fluid">
         </div>
         <div class="col-12 d-none position-absolute px-0" id="right-p-2" style="bottom:1rem">
             <div>
