Ayush | Fix issue of LIKHO dropdown

--- a/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
@@ -34,9 +34,9 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-7 all-languages mb-4">
                         <div class="row m-0">
-                            <div class="col-6 p-0">
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 p-0">
                                 <label class="position-absolute text-muted" style="left:15px;margin-top:13px;font-size:14px"><%= __('FROM') %>:</label>
-                                <select class="col-10 btn dropdown-toggle h6 w-90 rounded" id="from-dash-language" style="height:48px;padding:5px 10px 5px 75px;border-color:#959595;color:#959595">
+                                <select class="col-lg-10 col-md-10 col-sm-12 col-xs-12 btn dropdown-toggle h6 w-90 rounded" id="from-dash-language" style="height:48px;padding:5px 10px 5px 75px;border-color:#959595;color:#959595">
                                     <option selected="selected" class="pointer" id="language_button" value="">
                                         <%= __('All Languages') %>
                                     </option>
@@ -47,7 +47,7 @@
                                     <% }) %>
                                 </select>
                             </div>
-                        <div class="col-5 p-0">
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 p-0">
                             <label class="position-absolute text-muted" style="left:15px;margin-top:13px;font-size:14px"><%= __('TO') %>:</label>
                             <select class="col-12 btn dropdown-toggle h6 w-90 rounded" id="to-dash-language" style="height:48px;padding:5px 10px 5px 75px;border-color:#959595;color:#959595">
                                 <option selected="selected" class="pointer" id="language_button" value="">
