| Priyanshu |Fix viewALlDetail btn css and made starting of progress bar from 1 not 0

--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.css
@@ -403,3 +403,10 @@ body.modal-open .supreme-container {
   max-width: 90%;
 }
 
+#viewAllDetailsBtn:focus {
+  text-decoration: none;
+  background-color: #007bff;
+  border-color: #007bff;
+  color: white;
+}
+
