--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
@@ -444,3 +444,10 @@ body.modal-open .supreme-container {
     text-align: right;
   }
 }
+
+#viewAllDetailsBtn:focus {
+  text-decoration: none;
+  background-color: #007bff;
+  border-color: #007bff;
+  color: white;
+}
