--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
@@ -33,7 +33,7 @@
         <%- include ../common/languageNavBar.ejs %>
     </div>
     <div class="m-auto row justify-content-center mt-lg-4 mx-lg-5">
-        <%- include('../common/cards.ejs',{left:{h1:"Label",h2:"Type the text as per the image","p1":"",img:"../../img/look.svg"},right:{h1:"Validate",h2:"Correct the text as per the image","p1":"",img:"../../img/validate.svg"}}); %>
+        <%- include('../common/cards.ejs',{left:{h1:"Label",h2:"Type the text as per the image","p1":"",img:"../../img/look.svg"},right:{h1:"Validate",h2:"Validate the text as per the image","p1":"",img:"../../img/validate.svg"}}); %>
     </div>
     <div class="row">
         <div class="col-12 col-md-11 col-lg-11 ml-lg-auto p-5 mt-4 text-dark">
@@ -46,7 +46,7 @@
                         <div><span class="spinner"></span></div>
                     </div>
                     <div class="row text-center contribution-details" id="contribution-details">
-                        <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Images labelled','Text corrected']})%>
+                        <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Images labelled','Text validated']})%>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 </h4>
                 <div class="d-flex mb-3">
                     <div name="topLanguageChart" id="hours_chart" value="hours">
-                        <%= __('Images labelled and corrected') %>
+                        <%= __('Images labelled and validated') %>
                     </div>
                 </div>
                 <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
