--- a/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/dashboard/dashboard.ejs
@@ -77,7 +77,7 @@
                 <div><span class="spinner"></span></div>
             </div>
             <div class="row text-center contribution-details d-none" id="contribution-details">
-                <%- include('../common/contributionStats.ejs',{labels :['Language pairs','People participated','Translations done','Translations corrected']})%>
+                <%- include('../common/contributionStats.ejs',{labels :['Language pairs','People participated','Translations done','Translations validated']})%>
             </div>
         </div>
     </div>
