--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="m-auto row justify-content-center mt-lg-4 mx-lg-5">
-        <%- include('../common/cards.ejs',{left:{h1:"Translate",h2:"Translate and type the text","p1":"",img:"../../img/translate.svg"},right:{h1:"Validate",h2:"Correct the translation","p1":"",img:"../../img/validate.svg"}}); %>
+        <%- include('../common/cards.ejs',{left:{h1:"Translate",h2:"Translate and type the text","p1":"",img:"../../img/translate.svg"},right:{h1:"Validate",h2:"Validate the translation","p1":"",img:"../../img/validate.svg"}}); %>
     </div>
     <div class="row">
         <div class="col-12 col-md-11 col-lg-11 ml-lg-auto p-5 mt-4 text-dark">
@@ -75,7 +75,7 @@
                         <div><span class="spinner"></span></div>
                     </div>
                     <div class="row text-center contribution-details" id="contribution-details">
-                        <%- include('../common/contributionStats.ejs',{labels :['Language pairs','People participated','Translations done','Translations corrected']}) %>
+                        <%- include('../common/contributionStats.ejs',{labels :['Language pairs','People participated','Translations done','Translations validated']}) %>
                     </div>
                 </div>
             </div>
