--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -15,7 +15,7 @@
             <h1 class="display-5">
                 <%= __(left.h1) %>
             </h1>
-            <div class="mt-3 font-weight-bold">
+            <div class="mt-3 font-weight-normal">
                 <%= __(left.h2) %>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <h1 class="display-5">
                 <%= __(right.h1) %>
             </h1>
-            <div class="mt-3 font-weight-bold">
+            <div class="mt-3 font-weight-normal">
                 <%= __(right.h2) %>
             </div>
         </div>
