--- a/crowdsource-ui/src/views/common/headerForContributor.ejs
+++ b/crowdsource-ui/src/views/common/headerForContributor.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
+<nav class="navbar navbar-expand-lg navbar-light bg-light px-4 py-lg-0">
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
             <h2 class="mb-0">
