--- a/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/dashboard/dashboard.ejs
@@ -59,7 +59,7 @@
                 <div><span class="spinner"></span></div>
             </div>
             <div class="row text-center contribution-details d-none" id="contribution-details">
-                <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Hrs transcribed','Hrs corrected']})%>
+                <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Hrs transcribed','Hrs validated']})%>
 </div>
         </div>
     </div>
