Akshit | fix feedback form select current module logic

--- a/crowdsource-ui/src/views/common/feedback/feedback.ejs
+++ b/crowdsource-ui/src/views/common/feedback/feedback.ejs
@@ -28,20 +28,20 @@
                 <div class="mb-4">
                     <div class="form-row">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="bolo_id" value="Bolo">
+                            <input class="form-check-input" type="radio" name="feedbackRadio" id="bolo_id" value="bolo">
                             <label class="form-check-label xs-radio-label" for="bolo_id">
                                 <%= __('Bolo') %>
                             </label>
                         </div>
     
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="suno_id" value="Suno">
+                            <input class="form-check-input" type="radio" name="feedbackRadio" id="suno_id" value="suno">
                             <label class="form-check-label xs-radio-label" for="suno_id">
                                 <%= __('Suno') %>
                             </label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="likho_id" value="Likho">
+                            <input class="form-check-input" type="radio" name="feedbackRadio" id="likho_id" value="likho">
                             <label class="form-check-label xs-radio-label" for="likho_id">
                                 <%= __('Likho') %>
                             </label>
@@ -51,13 +51,13 @@
                 <div class="mb-4">   
                     <div class="form-row">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="dekho_id" value="Dekho">
+                            <input class="form-check-input" type="radio" name="feedbackRadio" id="dekho_id" value="dekho">
                             <label class="form-check-label xs-radio-label" for="dekho_id">
                                 <%= __('Dekho') %>
                             </label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="others_id" value="Others">
+                            <input class="form-check-input" type="radio" name="feedbackRadio" id="others_id" value="others">
                             <label class="form-check-label xs-radio-label" for="others_id">
                                 <%= __('Others')%>
                             </label>
