| Priyanshu |remove 'woohoo' from thankyou page and add placeholder in textarea

--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -46,7 +46,7 @@
             <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="textarea-row">
                 <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0" id="edit-text" style="border-radius:12px">
                     <label><%- __('Add Text') %></label>
-                    <textarea class="form-control edit-area" maxlength="1000" id="edit" rows="3" style="resize:none"></textarea>
+                    <textarea class="form-control edit-area" maxlength="1000" id="edit" rows="3" placeholder="Start typing here..." style="resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
@@ -69,7 +69,7 @@
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
                             <a class="btn btn-primary text-white btn-lg h6 w-100" href="./home.html">
-                                <%- __('Back to dekhoIndia Home') %>
+                                <%- __('Back to dekho India Home') %>
                             </a></div>
                     </div>
                 </div>
