--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
@@ -70,7 +70,7 @@
                 <span class="marquee"><%= __('You are on a spree !!') %></span>
             </div>
             <div id="contribution_text" class="d-none">
-                <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('WooHoo!! You took the first important step') %></h4>
+                <h4 class="mb-3 thank-you-title mt-5 mt-lg-0"><%= __('You took the first important step') %></h4>
             </div>
             <div id="before_badge_content" class="d-none">
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
