Ayush | Fix back button issue

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
           
-            <div class="modal-footer pt-3 record-btn-container position-relative">
+            <div class="modal-footer pt-3 record-btn-container position-relative" style="height:72px">
                 <div class="row position-absolute top-back-btn">
                     <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
                 </div>
