--- a/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.ejs
+++ b/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/back-btn.css">
-<button class="btn btn-link p-0 back-btn">
+<button class="btn btn-link p-0 back-btn" id="back-btn">
     <a href="<%= url %>" class="nav-link">
         <span class="material-icons" style="vertical-align:sub">
 arrow_back
