--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -27,7 +27,7 @@
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
             
-            <div class="modal-footer pt-3 position-relative">
+            <div class="modal-footer pt-3 position-relative" style="height:72px">
                 <div class="row position-absolute dekho-back-btn top-back-btn">
                     <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
                 </div>
