--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -28,7 +28,7 @@
         <div id="content-wrapper" class="d-flex flex-column position-relative">
             
          
-            <div class="modal-footer pt-3 position-relative">
+            <div class="modal-footer pt-3 position-relative" style="height:72px">
                 <div class="row position-absolute top-back-btn">
                     <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
                 </div>
