Ayush | Fix issue and change contribution card m,essage

--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -7,7 +7,7 @@
                 <path d="M11 7H13V14H11V7ZM11 15H13V17H11V15Z" fill="#42B2C6"/>
                 </svg>
                 
-             <p class="pl-2">No contribution data available for selected language</p>
+             <p class="pl-2">Not collecting contributions for selected language</p>
         </div>
      </div>
     <div id="left_container" class="row align-items-center py-lg-5 position-relative col-10 card_container px-0" style="height:100%">
