--- a/crowdsource-ui/src/views/common/feedback/feedback.css
+++ b/crowdsource-ui/src/views/common/feedback/feedback.css
@@ -33,62 +33,6 @@
 	max-height: 867px;
 }
 
-.opinion input[type="radio"] {
-	position: absolute;
-	opacity: 0;
-}
-
-.opinion input[type="radio"] + svg {
-	-webkit-transition: all 0.2s;
-	transition: all 0.2s;
-}
-
-.opinion input + svg {
-	cursor: pointer;
-}
-
-.opinion input[class="sad"]:hover + svg,
-.opinion input[class="sad"]:checked + svg,
-.opinion input[class="sad"]:focus + svg {
-	border: 2px solid #E30606;
-	stroke: #E30606;
-	color:#E30606;
-}
-
-.opinion input[class="neutral-1"]:hover + svg,
-.opinion input[class="neutral-1"]:checked + svg,
-.opinion input[class="neutral-1"]:focus + svg {
-	border: 2px solid #EA913F;
-	stroke: #EA913F !important;
-	color:#EA913F;
-}
-
-.opinion input[class="neutral"]:hover + svg,
-.opinion input[class="neutral"]:checked + svg,
-.opinion input[class="neutral"]:focus + svg {
-	border: 2px solid #007BFF;
-	stroke: #007BFF !important;
-	color:#007BFF;
-}
-
-.opinion input[class="happy"]:hover + svg,
-.opinion input[class="happy"]:checked + svg,
-.opinion input[class="happy"]:focus + svg {
-	border: 2px solid #4ED738;
-	stroke: #4ED738;
-	color:#4ED738;
-	fill: #4ED738;
-}
-
-.opinion input[class="very-happy"]:hover + svg,
-.opinion input[class="very-happy"]:checked + svg,
-.opinion input[class="very-happy"]:focus + svg {
-	border: 2px solid #2A8908;
-	stroke: #2A8908;
-	color:#2A8908;
-	fill: #2A8908;
-}
-
 .label-color-feedback {
 	color: #494A4A !important;
 }
@@ -102,4 +46,27 @@
 	border-radius: 40px;
 	width: 160px;
 	height: 48px;
+}
+
+.opinion input[type="checkbox"] {
+    display: none;
+}
+.opinion label {
+	cursor: pointer;
+}
+
+label span {
+	font-family: Lato;
+	font-size: 16px;
+	font-style: italic;
+	font-weight: 400;
+	line-height: 32px;
+	letter-spacing: 0em;
+	text-align: left;
+	color: #959595;
+	margin-left: 3px;
+}
+
+label .required {
+	color: #C35757;
 }
