--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -20,6 +20,11 @@
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
+                <div class="py-2 px-16">
+                    <a href="<%- `${path}feedback.html`%>">
+                        <%= __('Feedback') %>
+                    </a>
+                </div>
             </div>
             <div class="row mx-0 mb-3">
                     <div class="col-12 mt-1 text-center">
