--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/home.css">
     <link rel="stylesheet" type="text/css" href="../../css/common/common.css">
     <link rel="stylesheet" type="text/css" href="../../css/likhoIndia/thankyou.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
 </head>
 
 <body>
