| Priyanshu |remove localidation for all pages and update content for badges info

--- a/crowdsource-ui/src/views/modules/sunoIndia/badges/validatorBadgesInfo.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/badges/validatorBadgesInfo.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"./",MODULE:"Suno India", PAGE_TITLE:"Correct"}); %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Suno India", PAGE_TITLE:"Validate"}); %>
 <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
     <div class="row mx-lg-5">
         <div class="col-12">
@@ -24,13 +24,13 @@
     </div>
     <div class="row mx-lg-5">
         <p class="col-12 col-lg-8 text-justify font-weight-light-lg">
-            <%- __('Earn badges or certificate by contributing to Bolo India. Speak a sentence in language of your choice or validate the sentence that is spoken on your desired language. Share badges in your social circle, build the hype, motivate your friends and family to contribute towards the cause. The strength of Bolo India is in the diversity of the people i.e. <b>YOU.</b>') %></p>
+            <%- __('Earn badges or certificate by contributing to Suno India. Validate the sentence that is transcibed on your desired language. Share badges in your social circle, build the hype, motivate your friends and family to contribute towards the cause. The strength of Suno India is in the diversity of the people i.e. <b>YOU.</b>') %></p>
     </div>
     <div class="row mx-lg-5 mt-5">
         <h2 class="col-12"><%= __('Contributor Levels') %></h2>
     </div>
     <div class="row mx-lg-5">
-        <p class="col-12 col-lg-8 font-weight-light-lg"><%= __('The levels defined by an overall mix of contributions and validations on Bolo India. Please see the criteria that defines different levels below:') %></p>
+        <p class="col-12 col-lg-8 font-weight-light-lg"><%= __('The levels defined by an overall validations on Suno India. Please see the criteria that defines different levels below:') %></p>
     </div>
     <div class="row mx-lg-5">
         <table class="table table-bordered table-striped table-responsive-xs text-center mx-3 w-100">
@@ -38,7 +38,7 @@
             <tr>
                 <th scope="col "><%= __('Level') %></th>
                 <th scope="col ">
-                    <p class="mb-0"><%= __('Contributions') %><br><%= __('(Recording + Validating)')%> </p>
+                    <p class="mb-0"><%= __('Contributions') %><br><%= __('(Validating)')%> </p>
                 </th>
                 <th scope="col "><%= __('Badge') %></th>
             </tr>
@@ -47,17 +47,17 @@
         </table>
     </div>
     <div class="row mx-lg-5">
-        <p class="col-12 col-lg-8 font-weight-light-lg"><%= __('Please note that your levels and badges may take upto 48hrs to update. Your contribution does not expire, but may decrease though if it doesn’t pass the validation test. We want you to remain an active contributor to Bolo India and stand a chance to get recognised by the Ministry of Electronics and Information Technology.')%></p>
+        <p class="col-12 col-lg-8 font-weight-light-lg"><%= __('Please note that your levels and badges may take upto 48hrs to update. Your contribution does not expire, but may decrease though if it doesn’t pass the validation test. We want you to remain an active contributor to Suno India and stand a chance to get recognised by the Ministry of Electronics and Information Technology.')%></p>
     </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<%- include('../common/footer.ejs',{path:"./"}) %>
+<%- include('../common/footer.ejs',{path:"../"}) %>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>$("footer").removeClass("fixed-bottom").addClass("bottom")</script>
-<script src="../../js/sunoIndia/badges_info.js"></script>
+<script src="../../js/sunoIndia/validation_badges_info.js"></script>
 
 </body>
 </html>
